# SEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Settings.cap  imgui.ini  
exe/: AtmosphericNoise.cpp  BadScene.cpp  CameraPath.cpp  CubeTrace.cpp  EnvMapTest.cpp  Fireworks.cpp  ImGui.cpp  OldTestScene.cpp  PointCloud.cpp  ShaderToy.cpp  SketchUp.cpp  SponzaTestScene.cpp  TestForward.cpp  Tests.cpp  UglyTransparentWater.cpp  UselessRaytracing.cpp  Voxels.cpp  gltf.cpp
exe/Raytracing/: Ray.glsl
ext/: fts_fuzzy_match.h
ext/imgui/: imconfig.h
ext/imgui-glfw/: imgui_impl_glfw_gl3.cpp
ext/imgui-nodocking/: imconfig.h
ext/imgui/addons/imguidock/: Source.txt
ext/tinygltfloader/: tiny_gltf_loader.cc
in/3DModels/dragon/: Figurine Dragon N170112.3DS
src/Core/: App.cpp  App.hpp  Application.cpp  Application.hpp  Clock.cpp  Clock.hpp  ComponentTypes.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Log.cpp  Log.hpp  Resources.cpp  Resources.hpp  Resources.tcc  ResourcesManager.cpp  ResourcesManager.hpp  ResourcesManager.tcc  Scene.cpp  Scene.hpp  Text.cpp  Text.hpp  TimeManager.cpp  TimeManager.hpp  serialization.cpp  serialization.hpp  serialization.inl
src/ECS/: Component.cpp  Component.hpp  ComponentIterator.hpp  ComponentPool.hpp  ComponentValidation.hpp  Entity.cpp  Entity.hpp  System.hpp  World.cpp  World.hpp
src/GLSL/: blend_fs.glsl  bloom_blend_fs.glsl  cube_matrices.glsl  cubedepth_easy_gs.glsl  cubedepth_gs.glsl  cubedepth_vs.glsl  cubemap_gs.glsl  depth_fs.glsl  depth_instance_vs.glsl  depth_vs.glsl  encode_normal.glsl  fs.glsl  fullscreen_vs.glsl  fxaa_fs.glsl  gaussian_blur.glsl  gaussian_blur_9.glsl  gaussian_blur_h_cs.glsl  gaussian_blur_v_cs.glsl  lineardepth_fs.glsl  normals_cs.glsl  poisson_samples.glsl  random3.glsl  raytraced_screenspace_shadows_cs.glsl  raytracing.glsl  vs.glsl
src/GLSL/CubeTrace/: fs.glsl  fs_o.glsl
src/GLSL/Debug/: light_forward_fs.glsl  light_fs.glsl  light_gs.glsl  light_range_fs.glsl  light_range_gs.glsl  light_range_vs.glsl  light_star_fs.glsl  light_vs.glsl
src/GLSL/Deferred/: cook_torrance.glsl  cube_gs.glsl  deferred_fs.glsl  deferred_normal_map_fs.glsl  deferred_terrain_fs.glsl  deferred_vs.glsl  tiled_deferred_shadow_cs.glsl
src/GLSL/Forward/: forward_fs.glsl  forward_vs.glsl  simple_fs.glsl  simple_vs.glsl
src/GLSL/GUI/: line_fs.glsl  line_vs.glsl  rect_fs.glsl  rect_gs.glsl  rect_vs.glsl
src/GLSL/PointCloud/: fs.glsl
src/GLSL/ShaderToy/: fs.glsl  shadertoy_inputs.glsl  shadertoy_main.glsl  vs.glsl
src/GLSL/Skybox/: skybox_cube_fs.glsl  skybox_cube_gs.glsl  skybox_fs.glsl  skybox_vs.glsl
src/GLSL/Text/: text_fs.glsl  text_vs.glsl
src/GLSL/Water/: draw_fs.glsl  draw_gs.glsl  draw_indexed_fs.glsl  draw_indexed_vs.glsl  draw_tf_gs.glsl  draw_tf_vs.glsl  draw_vs.glsl  update_cs.glsl  update_shared_cs.glsl
src/GUI/: GUIButton.hpp  GUICheckbox.hpp  GUIClickable.hpp  GUIEdit.hpp  GUIElement.cpp  GUIElement.hpp  GUIGraph.hpp  GUIGraph.tcc  GUILine.cpp  GUILine.hpp  GUISeparator.hpp  GUISystem.hpp  GUIText.cpp  GUIText.hpp  GUIWindow.hpp
src/Geometry/: Bezier.hpp  BoundingShape.hpp  CollisionBox.cpp  CollisionBox.hpp  Frustum.cpp  Frustum.hpp  NoisyTerrain.cpp  NoisyTerrain.hpp  Plane.hpp  RadialTerrain.cpp  Raytracing.hpp  Terrain.cpp  Terrain.hpp  Transformation.cpp  Transformation.hpp  glmext.hpp
src/Geometry/Terrain/: ElevationFunction.hpp  NoisyTerrain.cpp  NoisyTerrain.hpp  RadialTerrain.hpp
src/Graphics/: Animation.hpp  Axes.cpp  Axes.hpp  Blur.cpp  Blur.hpp  BoundingShape.hpp  Camera.cpp  Camera.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Frustum.cpp  Frustum.hpp  Light.cpp  Light.hpp  Light.tcc  Material.cpp  Material.hpp  Material.inl  Mesh.cpp  Mesh.hpp  MeshBatch.cpp  MeshBatch.hpp  MeshInstance.cpp  MeshInstance.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OmnidirectionalLight.cpp  OmnidirectionalLight.hpp  OrthographicLight.cpp  OrthographicLight.hpp  Plane.hpp  PointLight.hpp  RiggedMesh.cpp  RiggedMesh.hpp  Scene.hpp  Skeleton.hpp  Skybox.cpp  Skybox.hpp  SpotLight.cpp  SpotLight.hpp  (+3 more)
src/Tools/: Bezier3D.hpp  CubicSpline.hpp  CubicSpline.tcc  MathTools.hpp  Meta.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Random.hpp  Raytracing.hpp  Singleton.hpp  hash.hpp  stdext.hpp
tmp/: OmnidirectionalLight.cpp  OrthographicLight.hpp
